--- a/mobile-first.css
+++ b/mobile-first.css
@@ -1,5 +1,12 @@
-@media (min-width: 600px) {
-  body {
-    background: rgb(0, 85, 128);
+.content {
+
+    float: left;
+    width: 60%;
+  
+
+    
+    @media (max-width: 800px) {
+      float: none;
+      width: 100%;
+    }
   }
-}
