--- a/style.css
+++ b/style.css
@@ -6,12 +6,19 @@ body {
   margin: 20px;
 }
 
+h1{
+  display: inline-block;
+}
+
 ul {
   list-style: none;
   font-size: 30px;
   display: inline-flex;
   padding-left: 10px;
   margin-left: 10px;
+}
+.socialmediaicons{
+  display: inline-block;
 }
 
 p {
@@ -22,6 +29,7 @@ p {
 span {
   color: blue;
   font-size: 20px;
+  display: block;
 }
 
 a {
@@ -30,9 +38,11 @@ a {
   padding-right: 10px;
   margin-left: 10px;
   font-size: 40px;
+  display:inline-block;
 }
 
 .resumebutton {
+  display: block;
   height: 50px;
   width: 200px;
   margin-top: 20px;
@@ -43,6 +53,12 @@ a {
 
 .red {
   float: right;
-  width: 300px;
-  height: 400px;
+  width: 100px;
+  height: 200px;
+}
+.aboutme{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-flex;
 }
