--- a/style.css
+++ b/style.css
@@ -60,5 +60,5 @@ a {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: bold;
-  display: inline-flex;
+  display: flex;
 }
