--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  min-width: 500px;
+  max-width: 500px;
   background-image: url(blue-curve.avif);
   background-size: cover;
   padding: 20px;
@@ -18,7 +18,9 @@ ul {
   margin-left: 10px;
 }
 .socialmediaicons{
-  display: inline-block;
+  display: fex;
+  color: red;
+  font-weight: 100;
 }
 
 p {
@@ -38,7 +40,7 @@ a {
   padding-right: 10px;
   margin-left: 10px;
   font-size: 40px;
-  display:inline-block;
+  display:flex;
 }
 
 .resumebutton {
@@ -62,3 +64,4 @@ a {
   font-weight: bold;
   display: flex;
 }
+
