--- a/style.css
+++ b/style.css
@@ -65,3 +65,17 @@ a {
   display: flex;
 }
 
+.bluecurve{
+  width: 200px;
+  height: 400px;
+  border-radius: 20px;
+}
+.seemyproject{
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  width: 50px;
+  height: 30px;
+}
