--- a/style.css
+++ b/style.css
@@ -67,16 +67,34 @@ a {
   font-weight: bold;
   display: flex;
 }
-
-.bluecurve{
-  width: 200px;
-  height: 400px;
-  border-radius: 20px;
-  margin-top: 30px;
-  padding-top: 30px;
+button{
+  width: 80px;
+  height: 30px;
+  margin: 10px;
+  border-radius: 5px;
+  
 }
+
 .seemyproject{
   width: 150px;
   height: 50px;
   border-radius: 20px;
+  margin-bottom: 30px;
 }
+.greencurve{
+  display: flex;
+  width: 100px;
+  height: 500px;
+  margin-top: 20px;
+  transition: 0.4s;
+}
+.greencurve :hover{
+  transform: scale(20deg);
+}
+
+
+
+
+
+
+
