--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+
+.sectionA {
+  background-color: blue;
+  width: 1200px;
+  height: 70px;
+  margin-top: 5px;
+  align-content: normal;
+}
+
+.sectionA h1  button{
+  height: 30px;
+  width: 120px;
+  
+  
+}
 body {
   max-width: 500px;
   background-image: url(blue-curve.avif);
@@ -6,10 +21,33 @@ body {
   margin: 20px;
 }
 
-h1{
-  display: inline-block;
+.secondsection{
+  margin-left: 200px;
+  width: 1200px;
+  height: 600px;
+  background-color: rgb(29, 29, 120);
+  opacity: 1;
+  border-radius: 20px;
+}
+.sunrise{
+  display: flex;
+  margin-left: 40px;
+  padding-bottom: 40px;
+  padding-top: 50px;
 }
 
+h1{
+  display: inline-block;
+  color: whitesmoke;
+  padding-left: 20px;
+}
+h3{
+  padding-left: 30px;
+}
+
+p{
+  margin-left: 20px;
+}
 ul {
   list-style: none;
   font-size: 30px;
@@ -18,9 +56,8 @@ ul {
   margin-left: 10px;
 }
 .socialmediaicons{
-  display: fex;
+  display: inline;
   color: red;
-  font-weight: 100;
 }
 
 p {
@@ -35,7 +72,7 @@ span {
 }
 
 a {
-  color: black;
+  color: rgb(162, 41, 41);
   text-decoration: none;
   padding-right: 10px;
   margin-left: 10px;
@@ -52,6 +89,10 @@ a {
   border-radius: 10px;
   font-size: 20px;
   box-shadow: inset;
+  transition: 0.3s;
+}
+.resumebutton:hover{
+  transform: scale(1.5);
 }
 .sunrise{
   width: 500px;
@@ -68,11 +109,25 @@ a {
   display: flex;
 }
 button{
-  width: 80px;
+  width: 100px;
   height: 30px;
   margin: 10px;
   border-radius: 5px;
+  transition: 0.3s;
+}
+button:hover{
+  transform: scale(1.1);
+}
   
+
+.sectiontree{
+  border-style: inset;
+  box-shadow: inset;
+  width: 1300px;
+  height: 800px;
+  background-color: aquamarine;
+  
+
 }
 
 .seemyproject{
@@ -91,19 +146,41 @@ button{
 .greencurve :hover{
   transform: scale(20deg);
 }
+.sectionfour{
+  width: 1200px;
+  height: 600px;
+  background-color: aqua;
+  border-radius: 50px;
+  padding-top: 50px;
+  margin: auto;
+  float: left;
+}
 form{
   margin-left: 400px;
   justify-content: center;
   text-align: center;
   align-content: center;
-  width: 500px;
+  width: 600px;
   border-radius: 30px;
-  height: 300px;
+  height: 400px;
   background-color: azure;
   opacity: 1;
   padding-top: 30px;
   
 }
+label, input{
+  margin-top: 10px;
+  line-height: 30px;
+  border-radius: 5px;
+  
+}
+textarea{
+  margin-top: 10px;
+  resize: none;
+  line-height: 15px;
+  border-radius: 20px;
+}
+
 .submit{
   margin-top: 30px;
   width: 200px;
