--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
 
+ 
 .sectionA {
-  background-color: blue;
-  width: 1200px;
+  background-image: linear-gradient(to right, red, green);
+  animation: infinite;
+  width: 1500px;
   height: 70px;
-  margin-top: 5px;
-  align-content: normal;
+  margin-top: 0px;
+  border: inset;
+  box-shadow: 20px;
+  
 }
 
 .sectionA h1  button{
   height: 30px;
   width: 120px;
   
-  
 }
+
 body {
-  max-width: 500px;
-  background-image: url(blue-curve.avif);
+  max-width: 1200px;
+  background-image: linear-gradient(to right, black, purple);
+
   background-size: cover;
   padding: 20px;
   margin: 20px;
@@ -123,9 +128,12 @@ button:hover{
 .sectiontree{
   border-style: inset;
   box-shadow: inset;
+  color: azure;
+  margin-top: 50px;
+  margin-bottom: 50px;
   width: 1300px;
   height: 800px;
-  background-color: aquamarine;
+  background-color: transparent
   
 
 }
@@ -149,7 +157,7 @@ button:hover{
 .sectionfour{
   width: 1200px;
   height: 600px;
-  background-color: aqua;
+  background-image: linear-gradient(to right, red, black);
   border-radius: 50px;
   padding-top: 50px;
   margin: auto;
@@ -162,17 +170,24 @@ form{
   align-content: center;
   width: 600px;
   border-radius: 30px;
-  height: 400px;
-  background-color: azure;
-  opacity: 1;
+  height: 550px;
+  background-color: transparent;
+  border-width: 20px;
+  box-shadow: inset;
+  border: inset;
   padding-top: 30px;
   
 }
-label, input{
+ input{
   margin-top: 10px;
   line-height: 30px;
-  border-radius: 5px;
+  border: none;
+  width: 300px;
+  transition: ease-in 0.42;
   
+}
+input:hover{
+  transform: translateX(1.5);
 }
 textarea{
   margin-top: 10px;
@@ -183,13 +198,6 @@ textarea{
 
 .submit{
   margin-top: 30px;
-  width: 200px;
-}
-label{
-  margin-right: 20px;
-  width: fit-content;
-}
-input{
   width: 200px;
 }
 
