--- a/style.css
+++ b/style.css
@@ -1,15 +1,55 @@
-*{
-  margin: 0px;
-  padding: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
+
+body {
+  z-index: 1;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f5f7;
+}
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  
+  
+}
+ul {
+  list-style: none;
+  font-size: small;
+  display: inline-flex;
+  padding-left: 10px;
+  margin-left: 10px;
+}
+
 .navbar{
   width: 1500px;
   height: 50px;
-  background-color: rgb(16, 8, 8);  
-  font-size:small;
+  background-color: rgb(18, 31, 205);  
+  font-size:smaller;
   font-weight: bold;
   text-align: right;
   color: rgb(245, 241, 241);
+}
+.navbar a{
+  font-size: 20px;
+  color: aliceblue;
+  
+}
+
+@keyframes flip {
+  from {
+    transform: rotateX(0deg);
+  }
+
+  to {
+    transform: rotateX(360deg);
+  }
 }
 
 
@@ -17,10 +57,9 @@
   background-image: linear-gradient(to right, rgb(28, 3, 3), green);
   width: 1400px;
   height: 400px;
-  margin-top: 0px;
   border: inset;
   box-shadow: 20px;
-  margin-top: 20px;
+  
 }
 .red{
   margin-top: 20px;
@@ -42,12 +81,6 @@
   margin-left: 20px;
 }
 
-body {
-  max-width: 1200px;
-  background-size: cover;
-  padding: 20px;
-  margin: 20px;
-}
 
 .secondsection{
   margin-left: 200px;
@@ -76,13 +109,7 @@ h3{
 p{
   margin-left: 20px;
 }
-ul {
-  list-style: none;
-  font-size: small;
-  display: inline-flex;
-  padding-left: 10px;
-  margin-left: 10px;
-}
+
 .socialmediaicons{
   display: inline;
   color: red;
@@ -100,7 +127,7 @@ span {
 }
 
 a {
-  color: rgb(162, 41, 41);
+  color: rgb(162, 41, 75);
   text-decoration: none;
   padding-right: 10px;
   margin-left: 10px;
